fix broken layout, now just need to fix horizontal scrolling

--- a/public/style.css
+++ b/public/style.css
@@ -1,36 +1,47 @@
 @import url('https://fonts.googleapis.com/css?family=Anton|Lobster|Spirax');
 /* 🥕 */
-:root{
-    /* --prime: #3352aa; */
-     --prime: linear-gradient(120deg, #3352aa, #7065ff, #3098ff);
-    --secondary-clr: #f2900f;
-    --white: rgba(233, 233, 233, 0.801);
-    --blk: #353535;
-    --bradius: 8px;
+:root {
+  /* --prime: #3352aa; */
+  --prime: linear-gradient(120deg, #3352aa, #7065ff, #3098ff);
+  --secondary-clr: #f2900f;
+  --white: rgba(233, 233, 233, 0.801);
+  --blk: #353535;
+  --bradius: 8px;
 }
 
 /* 🌎 */
-*,*:before,*:after{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    line-height: 1.25;
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  line-height: 1.25;
 }
 
-#container{
-    display: grid;
-    font-family: Verdana, Geneva, Tahoma,   sans-serif;
-    background: var(--prime);
-    width: 100vw;
-    height: 100vh;
-    grid-template-rows: auto;
+body {
+  display: flex;
+  align-items: center;
+  height: 100vh;
 }
-
-h1{
-    text-shadow: 2px 2px var(--blk);
-    color: var(--secondary-clr);
-    font-family: Spirax; 
-    justify-self: center;
+#container {
+  display: grid;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: var(--prime);
+  width: 100vw;
+  height: 100vh;
+  grid-template-rows: auto;
+  padding: 4px;
+  overflow-x: auto;
+}
+#container::-webkit-scrollbar {
+  display: none;
+}
+h1 {
+  text-shadow: 2px 2px var(--blk);
+  color: var(--secondary-clr);
+  font-family: Spirax;
+  justify-self: center;
 }
 
 /* figure{
@@ -39,13 +50,13 @@ h1{
     width:100vw;
 } */
 
-img{
-    background-color: var(--white);
-    box-shadow: 2px 5px 5px 2px var(--blk);
-    display: block;
-    border: 2px solid var(--secondary-clr);
-    max-width: 100%;
-    /* margin: 0 auto .5rem auto; */
+img {
+  background-color: var(--white);
+  box-shadow: 2px 5px 5px 2px var(--blk);
+  display: block;
+  border: 2px solid var(--secondary-clr);
+  max-width: 100%;
+  /* margin: 0 auto .5rem auto; */
 }
 
 /* figcaption{
@@ -55,114 +66,125 @@ img{
     text-decoration: none;
 } */
 
-i{
-    margin-left: .3rem;
-    color: var(--blk);
-    font-size: 1.1rem;
+i {
+  margin-left: 0.3rem;
+  color: var(--blk);
+  font-size: 1.1rem;
 }
 
 /* figcaption:hover{
     color:var(--secondary-clr);
 }  */
 
-
-#form{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+#form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 input {
-    border-radius: 1.1rem;
-    text-align:justify;
+  border-radius: 1.1rem;
+  text-align: justify;
 }
 
-#button{
-    background-color: inherit;
-    border:none;
+#button {
+  background-color: inherit;
+  border: none;
 }
 
-#button:hover{
-    cursor: pointer;
+#button:hover {
+  cursor: pointer;
 }
-.fa-search-location{
-    color: var(--secondary-clr);
-}
-
-.form-space{
-    font-size: 1.1rem;
-    margin-right: 1em;
-    color: var(--secondary-clr);
+.fa-search-location {
+  color: var(--secondary-clr);
 }
 
-#display-picks{ 
-    display: grid;
-    margin: auto; 
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
-    row-gap: 2em;
-    /* grid-template-columns: repeat(3, 1fr);  */
+.form-space {
+  font-size: 1.1rem;
+  margin-right: 1em;
+  color: var(--secondary-clr);
 }
 
-/* Flip card */
-.flip-card{
-    background-color: transparent;
-    min-width:300px;    
-    min-height: 300px; 
-    border:1px solid inherit;
-    /* causes 3d effect */
-    perspective: 1000px; 
+#display-picks {
+  display: grid;
+  margin: 0 auto;
+  grid-template-columns: 6;
+  grid-auto-flow: column;
+  grid-gap: 0 50px;
+  padding: 1rem;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  border-radius: 10px;
+  scrollbar-width: none;
+  /* display: flex; */
+  /* align-items: center; */
+}
+#display-picks::-webkit-scrollbar {
+  display: none;
 }
 
-.flip-card-inner{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 1.5s;
-    transform-style: preserve-3d;
+/******** FLIP CARD *********/
+.flip-card {
+  background-color: transparent;
+  min-width: 300px;
+  min-height: 300px;
+  border: 1px solid inherit;
+  /* causes 3d effect */
+  perspective: 1000px;
+  margin-right: 1rem;
 }
 
-.flip-card:hover .flip-card-inner{
-    transform: rotateY(-180deg);
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1.5s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(-180deg);
 }
 
 /* position front and back of card */
-.flip-card-front, .flip-card-back{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    backface-visibility: hidden;
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
 }
 /* style the front */
-.flipcard-front{
-    background-color: inherit;
-    color: black;
+.flipcard-front {
+  background-color: inherit;
+  color: black;
 }
 
 /* style the back */
-.flip-card-back{
-    background-color: #1e90ff;
-    color: var(--white);
-    transform:rotateY(180deg);
-    text-align: center;;
+.flip-card-back {
+  background-color: #1e90ff;
+  color: var(--white);
+  transform: rotateY(180deg);
+  text-align: center;
 }
-.flip-card-back> h2{
-    
+.flip-card-back > h2 {
 }
 /*curved svg path */
-.flip-card-back svg{
-    display: block;
+.flip-card-back svg {
+  display: block;
 }
 
+footer {
+  color: var(--white);
+  font-family: Anton;
+  text-align: center;
+  width: 100%;
+  display: grid;
+}
 
-footer{
-    color: var(--white);
-    font-family: Anton;   
-    text-align: center;
-    width: 100vw;
-} 
-
-span{
-    margin-top: 2rem;
-    justify-self: end;
+span {
+  margin-top: 2rem;
+  justify-self: center;
+  align-self: end;
 }
